fixed title alignment

--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -59,10 +59,6 @@ h1 {
     justify-content: center;
 }
 
-.shumabdak {
-    color: red;
-}
-
 .icon-cog {
     color: black;
 }
